fix overlapping columns and remove all button on xs

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -84,7 +84,7 @@ body {
 }
 
 .list-column-row {
-    height: 26rem;
+    height: auto;
     display: block;
     clear: both;
 }
